--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neytiri useContext</title>
+    <title>Ney'tiri useContext</title>
     <link rel="stylesheet" href="/dist/output.css">
 </head>
 
@@ -14,9 +14,11 @@
     <!-- react -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script type="module" src="/src/Image.js"></script>
-    <script type="module" src="/src/Place.js"></script>
-    <script type="module" src="/src/App.js"></script>
+    <!-- <script type="module" src="/dist/Context.js"></script>
+    <script type="module" src="/dist/pictureData.js"></script>
+    <script type="module" src="/dist/Image.js"></script> -->
+    <script type="module" src="/dist/List.js"></script>
+    <script type="module" src="/dist/App.js"></script>
 </body>
 
 </html>
