--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- react -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <!-- <script type="module" src="/dist/Context.js"></script>
-    <script type="module" src="/dist/pictureData.js"></script>
-    <script type="module" src="/dist/Image.js"></script> -->
+    <!-- <script type="module" src="/dist/Context.js"></script> -->
+    <!-- <script type="module" src="/dist/pictureData.js"></script> -->
+    <!-- <script type="module" src="/dist/Image.js"></script> -->
     <script type="module" src="/dist/List.js"></script>
     <script type="module" src="/dist/App.js"></script>
 </body>
